# zephyr_led_strip

./: .gitignore  CMakeLists.txt  requirements.txt  west.yml
.devcontainer/: devcontainer.json
app/: CMakeLists.txt  Kconfig  prj.conf  sysbuild.conf
app/boards/: xiao_esp32c6.overlay
app/src/: main.c
app/src/bt/: CMakeLists.txt  bt.c  bt.h  bt_attrs.c  bt_attrs.h
app/src/context_storage/: CMakeLists.txt  context_storage.c  context_storage.h
app/src/factory_settings/: CMakeLists.txt  factory_settings.c  factory_settings.h
app/src/led_player/: CMakeLists.txt  led_player.c  led_player.h
app/src/led_player/pattern/: CMakeLists.txt  generic.c  generic.h
app/src/led_player/pattern/types/: CMakeLists.txt  rainbow.c  rainbow.h  unicolor_custom.c  unicolor_custom.h  unicolor_white_cold.c  unicolor_white_cold.h  unicolor_white_warm.c  unicolor_white_warm.h
app/src/low_power/: CMakeLists.txt  low_power.c  low_power.h
app/src/touch_controller/: CMakeLists.txt  touch_controller.c  touch_controller.h
app/sysbuild/: app.conf  mcuboot.conf
patches/modules/: README.md
patches/ncs/: README.md
patches/zephyr/: README.md  ws2812_spi_led_api.patch
scripts/: patch_modules.py  patch_ncs.py  patch_zephyr.py  west-commands.yml
